# aiot-assistant

./: LICENSE  README.md  task.md  具体说明.md
docs/: hardware-setup-guide.md
plant_assistant/demo/Project/Application/inc/: main.h  plant_logic.h
plant_assistant/demo/Project/Application/src/: main.c  plant_logic.c
plant_assistant/demo/Project/CMAKE_Project/: CMakeLists.txt  arm-none-eabi.cmake  build_and_flash.bat  build_and_flash.sh  gd32f470zk.cfg  gd32f470zk.ld  startup_gd32f470_gcc.S
plant_assistant/demo/Project/GD32F470Z_BSP/inc/: c2.h  c3.h  e1.h  e2.h  e3.h  e4.h  gd32f470z_eval.h  i2c.h  s1.h  s2.h  s5.h  s6.h  s7.h  s8.h  systick.h  uart.h
plant_assistant/demo/Project/GD32F470Z_BSP/src/: c2.c  c3.c  e1.c  e2.c  e3.c  e4.c  i2c.c  s1.c  s2.c  s5.c  s6.c  s7.c  s8.c  systick.c  uart.c
plant_assistant/docs/: hardware-setup-guide.md
plant_assistant/frontend/: requirements.txt  server.py
plant_assistant/frontend/templates/: index.html
plant_assistant/u2p_vision/: plant_recognition.py
xiaomi-aiot/: .gitignore  README.md  子板.md
xiaomi-aiot/1-light-humid-temperature/Task1/E1-DEMO/demo/Project/KEIL_Project/: E1-GD32470Z.uvoptx
xiaomi-aiot/1-light-humid-temperature/Task2withKey/demo/Project/Application/src/: main.c
xiaomi-aiot/1-light-humid-temperature/Task2withKey/demo/Project/KEIL_Project/: E1-GD32470Z.uvprojx
xiaomi-aiot/1-light-humid-temperature/Task2withKey/demo/Project/KEIL_Project/Listings/: E1-GD32450Z.map
xiaomi-aiot/1-light-humid-temperature/温湿度计-WithButton/: Readme.md
xiaomi-aiot/1-light-humid-temperature/温湿度计-WithButton/demo/Project/Application/src/: main - 副本.c  main.c
xiaomi-aiot/1-light-humid-temperature/温湿度计-WithButton/demo/Project/GD32F470Z_BSP/inc/: s1.h
xiaomi-aiot/1-light-humid-temperature/温湿度计-WithButton/demo/Project/KEIL_Project/: E1-GD32470Z.uvoptx  E1-GD32470Z.uvprojx
xiaomi-aiot/1-light-humid-temperature/温湿度计-WithButton/demo/Project/KEIL_Project/Listings/: E1-GD32450Z.map
xiaomi-aiot/2-auto_light/: README.md
xiaomi-aiot/2-auto_light/Autolight-DEMO/demo/Project/Application/inc/: main.h
xiaomi-aiot/2-auto_light/Autolight-DEMO/demo/Project/Application/src/: main.c
xiaomi-aiot/2-auto_light/Autolight-DEMO/demo/Project/KEIL_Project/: S7-GD32470Z.uvoptx  S7-GD32470Z.uvprojx
xiaomi-aiot/2-auto_light/Autolight-DEMO/demo/Project/KEIL_Project/Listings/: E2-GD32450Z.map  E3-GD32450Z.map  S2-GD32450Z.map  S7-GD32450Z.map
xiaomi-aiot/2-auto_light/Keylight-DEMO/demo/Project/Application/src/: main.c
xiaomi-aiot/2-auto_light/Keylight-DEMO/demo/Project/GD32F470Z_BSP/src/: s1.c
xiaomi-aiot/2-auto_light/Keylight-DEMO/demo/Project/KEIL_Project/: S1-GD32470Z.uvoptx  S1-GD32470Z.uvprojx
xiaomi-aiot/2-auto_light/Keylight-DEMO/demo/Project/KEIL_Project/Listings/: S1-GD32450Z.map  startup_gd32f470.lst
xiaomi-aiot/3-auto_curtain_machine/Task3-1/E3-DEMO/demo/Project/KEIL_Project/: E3-GD32470Z.uvoptx  E3-GD32470Z.uvprojx
xiaomi-aiot/3-auto_curtain_machine/Task3-2/E3-DEMO/demo/Project/KEIL_Project/: E3-GD32470Z.uvoptx  E3-GD32470Z.uvprojx
xiaomi-aiot/4-smart_fan/Task1/DEMO/: Readme.txt
xiaomi-aiot/4-smart_fan/Task1/DEMO/demo/Project/KEIL_Project/: E1-GD32470Z.uvoptx  E1-GD32470Z.uvprojx
xiaomi-aiot/4-smart_fan/Task2-刷卡风扇/: Readme.md
xiaomi-aiot/4-smart_fan/Task2-刷卡风扇/demo/Project/Application/src/: main.c
xiaomi-aiot/4-smart_fan/Task2-刷卡风扇/demo/Project/KEIL_Project/: E2-GD32470Z.uvoptx  E2-GD32470Z.uvprojx
xiaomi-aiot/4-smart_fan/Task2-刷卡风扇/demo/Project/KEIL_Project/Listings/: E2-GD32450Z.map  startup_gd32f470.lst
xiaomi-aiot/4-smart_fan/Task3/: README.md
xiaomi-aiot/4-smart_fan/Task3/C2-TERMI/demo/Project/KEIL_Project/: C2-GD32470Z.uvoptx  C2-GD32470Z.uvprojx
xiaomi-aiot/4-smart_fan/Task3/C3&C2-COOR/demo/Project/KEIL_Project/: C3-GD32470Z.uvoptx  C3-GD32470Z.uvprojx
xiaomi-aiot/5-smart_clock/Clock-DEMO/demo/Project/Application/inc/: main.h
xiaomi-aiot/5-smart_clock/Clock-DEMO/demo/Project/Application/src/: main.c
xiaomi-aiot/5-smart_clock/Clock-DEMO/demo/Project/GD32F470Z_BSP/inc/: s6.h
xiaomi-aiot/5-smart_clock/Clock-DEMO/demo/Project/GD32F470Z_BSP/src/: s7.c
xiaomi-aiot/5-smart_clock/Clock-DEMO/demo/Project/KEIL_Project/: S7-GD32470Z.uvoptx  S7-GD32470Z.uvprojx
xiaomi-aiot/5-smart_clock/Clock-DEMO/demo/Project/KEIL_Project/Listings/: S7-GD32450Z.map  startup_gd32f450.lst
xiaomi-aiot/5-smart_clock/S6-DEMO/demo/Project/Application/inc/: main.h
xiaomi-aiot/5-smart_clock/S6-DEMO/demo/Project/Application/src/: main.c
xiaomi-aiot/5-smart_clock/S6-DEMO/demo/Project/GD32F470Z_BSP/src/: s6.c
xiaomi-aiot/5-smart_clock/S6-DEMO/demo/Project/KEIL_Project/: S6-GD32470Z.uvoptx  S6-GD32470Z.uvprojx
xiaomi-aiot/6-recoder_speaker/S3 & E4-DEMO/: Readme.txt
xiaomi-aiot/6-recoder_speaker/S3 & E4-DEMO/demo/Project/KEIL_Project/: E4-GD32470Z.uvoptx  E4-GD32470Z.uvprojx
xiaomi-aiot/7-smart_lock/Task7-2/: Readme.md
xiaomi-aiot/7-smart_lock/Task7-3/: Readme.md
xiaomi-aiot/7-smart_lock/Task7-3/u2-wifi-speech/: Makefile  c2.c  c2.h  c3.c  c3.h  e1.c  e1.h  e2.c  e2.h  e3.c  e3.h  ht16k33_common.c  ht16k33_common.h  i2c_common.c  i2c_common.h  i2c_s1_key.c  i2c_s1_key.h  s6.c  s6.h  u2_demo  u2_demo.c  uart.c  uart.h
xiaomi-aiot/Smart_lock_pro/: Readme.md
xiaomi-aiot/Smart_lock_pro/demo/Project/Application/inc/: main.h
xiaomi-aiot/Smart_lock_pro/demo/Project/Application/src/: main.c
xiaomi-aiot/Smart_lock_pro/demo/Project/GD32F470Z_BSP/inc/: c2.h  c3.h  s7.h
xiaomi-aiot/Smart_lock_pro/demo/Project/GD32F470Z_BSP/src/: c2.c  c3.c  e1.c  e2.c  e3.c  s2.c  uart.c
xiaomi-aiot/Smart_lock_pro/demo/Project/KEIL_Project/: S1-GD32470Z.uvoptx  S1-GD32470Z.uvprojx
xiaomi-aiot/Smart_lock_pro/demo/Project/KEIL_Project/Listings/: S1-GD32450Z.map  U1-GD32450Z.map  startup_gd32f470.lst
xiaomi-aiot/sherpa-ncnn-beta/: talsa_dameon.sh  wavs.tar  开发版.txt  语音控制模块.md
xiaomi-aiot/sherpa-ncnn-beta/sherpa-ncnn/csrc/: CMakeLists.txt  app.c  app.h  c2.cc  c2.h  c3.cc  c3.h  pca9685.c  pca9685.h  sherpa-ncnn-alsa copy.cc  sherpa-ncnn-alsa.cc  uart.cc  uart.h
(+62 files in other folders)
